--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "^4.21.1",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "shadcn": "^2.1.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
