--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^10.14.1",
     "firebase-admin": "^12.6.0",
     "lucide-react": "^0.452.0",
+    "mongodb": "^6.9.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
