--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "express": "^4.21.1",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-tinder-card": "^1.6.4",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
