--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.1",
     "firebase": "^10.14.1",
     "firebase-admin": "^12.6.0",
+    "framer-motion": "^11.11.8",
     "lucide-react": "^0.452.0",
     "mongodb": "^6.9.0",
     "next": "14.2.15",
