--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "react-iframe": "^1.8.5",
     "react-spinners": "^0.14.1",
     "react-tinder-card": "^1.6.4",
     "shadcn": "^2.1.0",
